[gd_scene load_steps=13 format=3 uid="uid://dpat4yk12d3gj"]

[ext_resource type="PackedScene" uid="uid://g1ryy4vtxc6w" path="res://assets/card/card.gltf" id="1_eu3qk"]
[ext_resource type="Script" uid="uid://c3ajd708k5jua" path="res://scripts/cards/elementals/elemental_card.gd" id="2_783ue"]
[ext_resource type="Shader" uid="uid://df0oqd8lvqbtw" path="res://shaders/card.gdshader" id="3_mfcmy"]
[ext_resource type="Texture2D" uid="uid://bnee8w5xyrm06" path="res://assets/card/major_arcanas/placeholder/background.png" id="4_lv5we"]
[ext_resource type="Texture2D" uid="uid://j871k2chtf35" path="res://assets/card/card.jpg" id="5_tusa6"]
[ext_resource type="Texture2D" uid="uid://cxs66vja5lt5y" path="res://assets/card/major_arcanas/placeholder/foreground.png" id="6_0w2jm"]
[ext_resource type="Texture2D" uid="uid://ps1d74xvbal" path="res://assets/card/major_arcanas/placeholder/middleground.png" id="7_gi1un"]
[ext_resource type="Script" uid="uid://cuq1umeafxsoc" path="res://scripts/cards/card_area_3d.gd" id="8_7tko7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sy11y"]
render_priority = 0
shader = ExtResource("3_mfcmy")
shader_parameter/base_albedo = ExtResource("5_tusa6")
shader_parameter/background = ExtResource("4_lv5we")
shader_parameter/middleground = ExtResource("7_gi1un")
shader_parameter/foreground = ExtResource("6_0w2jm")

[sub_resource type="BoxMesh" id="BoxMesh_6u4wf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ktuci"]
cull_mode = 1
shading_mode = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_d81rb"]
size = Vector3(0.401245, 0.01017, 0.240997)

[node name="ElementalCard" instance=ExtResource("1_eu3qk")]
script = ExtResource("2_783ue")

[node name="Label" type="Label3D" parent="." index="0"]
transform = Transform3D(6.03983e-10, 0.008, 3.49691e-10, 0, -3.49691e-10, 0.008, 0.008, -6.03983e-10, -2.64009e-17, -0.16629, 0.0196944, 0.00501075)
sorting_use_aabb_center = false
pixel_size = 0.12
double_sided = false
render_priority = 1
outline_render_priority = 1
outline_modulate = Color(1, 1, 0, 1)
text = "ELEMENTAL TEMPLATE"
font_size = 27
outline_size = 1
uppercase = true

[node name="Card" parent="." index="1"]
transform = Transform3D(-3.49691e-10, -0.008, 3.49691e-10, 0, -3.49691e-10, -0.008, 0.008, -3.49691e-10, 1.52855e-17, 0.19, 0, -0.11)
material_override = SubResource("ShaderMaterial_sy11y")

[node name="Outline" type="MeshInstance3D" parent="Card" index="0"]
transform = Transform3D(0.101, 0, 0, 0, 0.002, 0, 0, 0, 0.061, 1.30534e-05, 0.00100001, 0.000145026)
mesh = SubResource("BoxMesh_6u4wf")
surface_material_override/0 = SubResource("StandardMaterial3D_ktuci")

[node name="CardArea3D" type="Area3D" parent="." index="2"]
collision_layer = 3
collision_mask = 3
script = ExtResource("8_7tko7")

[node name="CardCollisionShape" type="CollisionShape3D" parent="CardArea3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000305176, 0.00432205, -4.57764e-05)
shape = SubResource("BoxShape3D_d81rb")

[connection signal="input_event" from="CardArea3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="CardArea3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="CardArea3D" to="." method="_on_area_3d_mouse_exited"]
